Add initial grid logic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button>placeholder</button>
     </div>
         <div class="slider-container">
-            <h4>Number of blocks</h3>
+            <p id="block-number">Number of blocks</p>
             <p class="slider-num">16x16</p>
             <input type="range" min="16" max="64" class="slider">
         </div>
