Finish sketching logic and grid erase and create

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <div class="options-container">
         <p>Sketch options</p>
         <div class="buttons-container">
-        <button>placeholder</button>
-        <button>placeholder</button>
+        <button id="btn1">placeholder</button>
+        <button id="btn2">placeholder</button>
         <button>placeholder</button>
     </div>
         <div class="slider-container">
             <p id="block-number">Number of blocks</p>
-            <p class="slider-num">16x16</p>
-            <input type="range" min="16" max="64" class="slider">
+            <p id="slider-num"></p>
+            <input id="grid-slider" value="30" type="range" min="16" max="64" class="slider">
         </div>
       </div>
       <div class="sketch-container"></div>
